src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Referee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee  Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (Referee  Contact)</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referee_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Referrals (Referee Lead)</relationshipLabel>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <globalPicklist>Referral_Source</globalPicklist>
        <label>Referral Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_By_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Referee_Lead__c</columns>
        <columns>Referee_Contact__c</columns>
        <columns>Referred_By_Lead__c</columns>
        <columns>Referred_By_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REF-{0000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>